--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
     ></script>
 
     <script>
-      const socket = io("http://localhost:8080");
+      const socket = io("https://react-socket-server-c.herokuapp.com/");
       const form = document.querySelector("#miForm");
       const msgs = document.querySelector("#misMsgs");
       const txtMsg = document.querySelector("#txtMsg");
